Apply Fluid type paragraphs only on the main content area. Styling the unpublished message Make navbar fixed position Add top spacing when navbar is present

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -88,9 +88,9 @@ h6,
   margin: 1.67em 0
 }
 
-p {
-  font-size: 13px;
-  @include fluid-type(400px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+#page p {
+    font-size: 13px;
+    @include fluid-type(400px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
 }
 
 h1,
@@ -186,6 +186,13 @@ body.page-admin .region-footer {
     table {
         border: 0px;
     }
+}
+
+.unpublished {
+    color: red;
+    text-align: center;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 .help-page,
